[gd_scene load_steps=112 format=3 uid="uid://chwrpwf8t6sxu"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_03/actividad_03.gd" id="1_a5p8h"]
[ext_resource type="Texture2D" uid="uid://fai6o7famdqo" path="res://img/nucleo_3/fondo/linea_3_1.png" id="2_qb016"]
[ext_resource type="Texture2D" uid="uid://bt1ed5srjqotr" path="res://img/nucleo_3/fondo/linea_3_2.png" id="3_cgyqw"]
[ext_resource type="Texture2D" uid="uid://cs484jg2ggoi4" path="res://img/nucleo_3/fondo/linea_3_3.png" id="4_fcijg"]
[ext_resource type="Texture2D" uid="uid://ccpfacdqn04a0" path="res://img/nucleo_3/fondo/linea_3_4.png" id="5_qn0dx"]
[ext_resource type="Texture2D" uid="uid://cex6xvs2hw8e6" path="res://img/nucleo_3/fondo/linea_3_5.png" id="6_lhpnn"]
[ext_resource type="Texture2D" uid="uid://ciqibyrc6wwvt" path="res://img/nucleo_3/fondo/linea_3_6.png" id="7_xxl0k"]
[ext_resource type="Texture2D" uid="uid://biuqrfu7spt6x" path="res://img/nucleo_3/fondo/linea_3_7.png" id="8_wjlmf"]
[ext_resource type="Texture2D" uid="uid://i0maqqd3tkg7" path="res://img/nucleo_3/fondo/linea_3_8.png" id="9_m71y3"]
[ext_resource type="Texture2D" uid="uid://b3luw57w2vx4a" path="res://img/nucleo_3/fondo/linea_3_9.png" id="10_jse87"]
[ext_resource type="Texture2D" uid="uid://cctxugdxpt136" path="res://img/nucleo_3/fondo/linea_3_10.png" id="11_nido4"]
[ext_resource type="Texture2D" uid="uid://d3cmfolprll6t" path="res://img/nucleo_3/fondo/linea_3_11.png" id="12_qkjud"]
[ext_resource type="Texture2D" uid="uid://biixt18ov0is" path="res://img/nucleo_3/fondo/linea_3_12.png" id="13_3ufxv"]
[ext_resource type="Texture2D" uid="uid://d25vdyabubjj3" path="res://img/nucleo_3/fondo/linea_3_13.png" id="14_fu35h"]
[ext_resource type="Texture2D" uid="uid://kqxss0414yyp" path="res://img/nucleo_3/fondo/linea_3_14.png" id="15_k636h"]
[ext_resource type="Texture2D" uid="uid://bg8y7f1o8rj6f" path="res://img/nucleo_3/fondo/linea_3_15.png" id="16_ifrmd"]
[ext_resource type="Texture2D" uid="uid://dt55wl8w7dh8w" path="res://img/nucleo_3/fondo/linea_3_16.png" id="17_itb0u"]
[ext_resource type="Texture2D" uid="uid://b57ewpevtba3q" path="res://img/nucleo_3/fondo/linea_3_17.png" id="18_5341c"]
[ext_resource type="Texture2D" uid="uid://w5j4eejpsdry" path="res://img/nucleo_3/fondo/linea_3_18.png" id="19_sd7wt"]
[ext_resource type="Texture2D" uid="uid://cpx3aoro0s0pj" path="res://img/nucleo_3/fondo/linea_3_19.png" id="20_hbdxf"]
[ext_resource type="Texture2D" uid="uid://sxut62ylm58u" path="res://img/nucleo_3/fondo/linea_3_20.png" id="21_vanhm"]
[ext_resource type="Texture2D" uid="uid://cljior3n8qd87" path="res://img/nucleo_3/fondo/linea_3_21.png" id="22_a2crw"]
[ext_resource type="Texture2D" uid="uid://cicwmob1fkmbr" path="res://img/nucleo_3/fondo/linea_3_22.png" id="23_xo44f"]
[ext_resource type="Texture2D" uid="uid://b1qrj0khc45on" path="res://img/nucleo_3/fondo/linea_3_23.png" id="24_jv5oe"]
[ext_resource type="Texture2D" uid="uid://cdnv82li3lkv0" path="res://img/nucleo_3/fondo/linea_3_24.png" id="25_d5hng"]
[ext_resource type="Texture2D" uid="uid://ddtucmqr8lxf0" path="res://img/nucleo_3/fondo/linea_3_25.png" id="26_nhftf"]
[ext_resource type="Texture2D" uid="uid://boqa76n1b5kf" path="res://img/nucleo_3/fondo/linea_3_26.png" id="27_cmfge"]
[ext_resource type="Texture2D" uid="uid://fuakt5h8i2cm" path="res://img/nucleo_3/fondo/linea_3_27.png" id="28_jq0n1"]
[ext_resource type="Texture2D" uid="uid://701nigb20vhl" path="res://img/nucleo_3/fondo/linea_3_28.png" id="29_0d7ay"]
[ext_resource type="Texture2D" uid="uid://dxy1bdy1ohs1w" path="res://img/nucleo_3/fondo/linea_3_29.png" id="30_2i8u8"]
[ext_resource type="Texture2D" uid="uid://bv6kvjnduuimh" path="res://img/nucleo_3/fondo/linea_3_30.png" id="31_pq8ww"]
[ext_resource type="Texture2D" uid="uid://csnbt640vau8y" path="res://img/nucleo_3/fondo/linea_3_31.png" id="32_l2tis"]
[ext_resource type="Texture2D" uid="uid://brnsff1afexnm" path="res://img/nucleo_3/fondo/linea_3_32.png" id="33_b3cg0"]
[ext_resource type="Texture2D" uid="uid://brco1s0m8kkg" path="res://img/nucleo_3/fondo/linea_3_33.png" id="34_snrby"]
[ext_resource type="Texture2D" uid="uid://bx1bktnstuetl" path="res://img/nucleo_3/fondo/linea_3_34.png" id="35_61cjp"]
[ext_resource type="Texture2D" uid="uid://ltg8xp6skiyh" path="res://img/nucleo_3/fondo/linea_3_35.png" id="36_yqohq"]
[ext_resource type="Texture2D" uid="uid://colfw1xylq7xw" path="res://img/nucleo_3/fondo/linea_3_36.png" id="37_a7xi8"]
[ext_resource type="Texture2D" uid="uid://bkh5rc0ummhco" path="res://img/nucleo_3/fondo/linea_3_37.png" id="38_jabhf"]
[ext_resource type="Texture2D" uid="uid://bksa0abwp03gc" path="res://img/nucleo_3/fondo/linea_3_38.png" id="39_ve2iv"]
[ext_resource type="Texture2D" uid="uid://cuijxweauvmvq" path="res://img/nucleo_3/fondo/linea_3_39.png" id="40_lrked"]
[ext_resource type="Texture2D" uid="uid://dvft1o55nwl1h" path="res://img/nucleo_3/fondo/linea_3_40.png" id="41_3s5os"]
[ext_resource type="Texture2D" uid="uid://b0g3qrhi3p6hh" path="res://img/nucleo_3/fondo/linea_3_41.png" id="42_ub438"]
[ext_resource type="Texture2D" uid="uid://dv2nchtqmnjnb" path="res://img/nucleo_3/fondo/linea_3_42.png" id="43_6jnou"]
[ext_resource type="Texture2D" uid="uid://rlxv07duii85" path="res://img/nucleo_3/fondo/linea_3_43.png" id="44_y2tjt"]
[ext_resource type="Texture2D" uid="uid://dgb21bm2tx5v8" path="res://img/nucleo_3/fondo/linea_3_44.png" id="45_4iph0"]
[ext_resource type="Texture2D" uid="uid://dp0qqppkcmq1l" path="res://img/nucleo_3/fondo/linea_3_45.png" id="46_yv0m8"]
[ext_resource type="Texture2D" uid="uid://qufqjq8bk0d3" path="res://img/nucleo_3/fondo/linea_3_46.png" id="47_oj041"]
[ext_resource type="Texture2D" uid="uid://b0ws2le27obs" path="res://img/nucleo_3/fondo/linea_3_47.png" id="48_by23t"]
[ext_resource type="Texture2D" uid="uid://c51mmk4udy8ci" path="res://img/nucleo_3/fondo/linea_3_48.png" id="49_ryiod"]
[ext_resource type="Texture2D" uid="uid://dqm6y7tt475eg" path="res://img/nucleo_3/fondo/linea_3_49.png" id="50_1fpvo"]
[ext_resource type="Texture2D" uid="uid://difgso4u4jbsg" path="res://img/nucleo_3/fondo/linea_3_50.png" id="51_lopdd"]
[ext_resource type="Texture2D" uid="uid://br1xvrvcb07rv" path="res://img/nucleo_3/fondo/linea_3_51.png" id="52_ied7r"]
[ext_resource type="Texture2D" uid="uid://fykavpkdv0tc" path="res://img/nucleo_3/fondo/linea_3_52.png" id="53_uguxa"]
[ext_resource type="Texture2D" uid="uid://q8l82i5xldg1" path="res://img/nucleo_3/fondo/linea_3_53.png" id="54_ds677"]
[ext_resource type="Texture2D" uid="uid://baudwep01lnv1" path="res://img/nucleo_3/fondo/linea_3_54.png" id="55_fg66j"]
[ext_resource type="Texture2D" uid="uid://7cn66f0rjopp" path="res://img/nucleo_3/fondo/linea_3_55.png" id="56_8400n"]
[ext_resource type="Texture2D" uid="uid://t3o4ixbvm2r1" path="res://img/nucleo_3/fondo/linea_3_56.png" id="57_omw73"]
[ext_resource type="Texture2D" uid="uid://dsio8xeajxnmx" path="res://img/nucleo_3/fondo/linea_3_57.png" id="58_687c4"]
[ext_resource type="Texture2D" uid="uid://dlko0uy1oh71g" path="res://img/nucleo_3/fondo/linea_3_58.png" id="59_arqli"]
[ext_resource type="Texture2D" uid="uid://bt5h4wk3ccnd1" path="res://img/nucleo_3/fondo/linea_3_59.png" id="60_llfsa"]
[ext_resource type="Texture2D" uid="uid://8fh22a2n6tes" path="res://img/nucleo_3/fondo/linea_3_60.png" id="61_fybfs"]
[ext_resource type="Texture2D" uid="uid://dkk7g37rlsy0e" path="res://img/nucleo_3/fondo/linea_3_61.png" id="62_g5sb6"]
[ext_resource type="Texture2D" uid="uid://col3gcrnt36g4" path="res://img/nucleo_3/fondo/linea_3_62.png" id="63_eimxp"]
[ext_resource type="Texture2D" uid="uid://ba8nluwbe7fey" path="res://img/nucleo_3/fondo/linea_3_63.png" id="64_lpgbv"]
[ext_resource type="Texture2D" uid="uid://c64n3wi7dh4ha" path="res://img/nucleo_3/fondo/linea_3_64.png" id="65_jae12"]
[ext_resource type="Texture2D" uid="uid://b0e3j5xtjp02f" path="res://img/nucleo_3/fondo/linea_3_65.png" id="66_cadfq"]
[ext_resource type="Texture2D" uid="uid://go4w71uwqtms" path="res://img/nucleo_3/fondo/linea_3_66.png" id="67_q1den"]
[ext_resource type="Texture2D" uid="uid://b43j7k7wtvxca" path="res://img/nucleo_3/fondo/linea_3_67.png" id="68_rxnbq"]
[ext_resource type="Texture2D" uid="uid://dnb1bfn1o4wm" path="res://img/nucleo_3/fondo/linea_3_68.png" id="69_ysbd7"]
[ext_resource type="Texture2D" uid="uid://b2hlmf6po3f6r" path="res://img/nucleo_3/fondo/linea_3_69.png" id="70_g8iwh"]
[ext_resource type="Texture2D" uid="uid://b112sccgjdde1" path="res://img/nucleo_3/fondo/linea_3_70.png" id="71_wsi1p"]
[ext_resource type="Texture2D" uid="uid://ciau4a8hlvmfo" path="res://img/nucleo_3/fondo/linea_3_71.png" id="72_3h3hs"]
[ext_resource type="Texture2D" uid="uid://cyx4t6256pjjo" path="res://img/nucleo_3/fondo/linea_3_72.png" id="73_2oqwl"]
[ext_resource type="Texture2D" uid="uid://b1t10a83vnmcw" path="res://img/nucleo_3/fondo/linea_3_73.png" id="74_rs010"]
[ext_resource type="Texture2D" uid="uid://dnanylkxtblth" path="res://img/nucleo_3/fondo/linea_3_74.png" id="75_jnt0s"]
[ext_resource type="Texture2D" uid="uid://dlf7soxx4la15" path="res://img/nucleo_3/fondo/linea_3_75.png" id="76_n65fg"]
[ext_resource type="Texture2D" uid="uid://b233o4yndiu4v" path="res://img/nucleo_3/fondo/linea_3_76.png" id="77_73iq7"]
[ext_resource type="Texture2D" uid="uid://c0qehjarbdksu" path="res://img/nucleo_3/fondo/linea_3_77.png" id="78_v0yot"]
[ext_resource type="Texture2D" uid="uid://blx7am3wemy0o" path="res://img/nucleo_3/fondo/linea_3_78.png" id="79_f07wx"]
[ext_resource type="Texture2D" uid="uid://bk7qs4ykxjr43" path="res://img/nucleo_3/fondo/linea_3_79.png" id="80_u0nsi"]
[ext_resource type="Texture2D" uid="uid://cdmlv0ewakrgd" path="res://img/nucleo_3/fondo/linea_3_80.png" id="81_crsi1"]
[ext_resource type="Texture2D" uid="uid://6f4rfk23c6rk" path="res://img/nucleo_3/fondo/linea_3_81.png" id="82_68fvu"]
[ext_resource type="Texture2D" uid="uid://btk2w7ugap57r" path="res://img/nucleo_3/fondo/linea_3_82.png" id="83_i07m2"]
[ext_resource type="Texture2D" uid="uid://bena1c80rwvbn" path="res://img/nucleo_3/fondo/linea_3_83.png" id="84_472ew"]
[ext_resource type="Texture2D" uid="uid://k5rrnxa5lw2q" path="res://img/nucleo_3/fondo/linea_3_84.png" id="85_rgpvd"]
[ext_resource type="Texture2D" uid="uid://bykkrvnagl5mk" path="res://img/nucleo_3/fondo/linea_3_85.png" id="86_fpb1l"]
[ext_resource type="Texture2D" uid="uid://cibvnbv4alihf" path="res://img/nucleo_3/fondo/linea_3_86.png" id="87_odx4m"]
[ext_resource type="Texture2D" uid="uid://b1ogjqvy5u2gf" path="res://img/nucleo_3/fondo/linea_3_87.png" id="88_2oufi"]
[ext_resource type="Texture2D" uid="uid://b0dc5bwaycwyu" path="res://img/nucleo_3/fondo/linea_3_88.png" id="89_wn007"]
[ext_resource type="Texture2D" uid="uid://bqlt10ji7kajd" path="res://img/nucleo_3/fondo/linea_3_89.png" id="90_f7i5b"]
[ext_resource type="Texture2D" uid="uid://bngja5ttg4yh6" path="res://img/nucleo_3/fondo/linea_3_90.png" id="91_ppk52"]
[ext_resource type="Texture2D" uid="uid://dr7e7rvn3lote" path="res://img/nucleo_3/fondo/linea_3_91.png" id="92_m475f"]
[ext_resource type="Texture2D" uid="uid://b5ofjt82sc50h" path="res://img/nucleo_3/fondo/linea_3_92.png" id="93_rikf5"]
[ext_resource type="Texture2D" uid="uid://e68bb6l4dukw" path="res://img/nucleo_3/fondo/linea_3_93.png" id="94_kph4a"]
[ext_resource type="Texture2D" uid="uid://86row420snqi" path="res://img/nucleo_3/fondo/linea_3_94.png" id="95_bikjs"]
[ext_resource type="Texture2D" uid="uid://ccs20ml37l1kh" path="res://img/nucleo_3/fondo/linea_3_95.png" id="96_dhha3"]
[ext_resource type="Texture2D" uid="uid://xqybu7kjofk2" path="res://img/nucleo_3/fondo/linea_3_96.png" id="97_8ro85"]
[ext_resource type="Texture2D" uid="uid://ovu0eiq344dp" path="res://img/nucleo_3/fondo/linea_3_97.png" id="98_2bq1w"]
[ext_resource type="Texture2D" uid="uid://qn6sdg7fq1a5" path="res://img/nucleo_3/fondo/linea_3_98.png" id="99_tx8s3"]
[ext_resource type="Texture2D" uid="uid://cjq7l2kabukc6" path="res://img/nucleo_3/fondo/linea_3_99.png" id="100_uep3e"]
[ext_resource type="Texture2D" uid="uid://qiyhb5rufyn5" path="res://img/nucleo_3/fondo/linea_3_100.png" id="101_7gllj"]
[ext_resource type="PackedScene" uid="uid://sxca04083gd4" path="res://scenes/titila.tscn" id="102_yh0l6"]
[ext_resource type="Texture2D" uid="uid://dy6epmayrnige" path="res://img/nucleo_3/actividad_03/idea_1_1.png" id="103_22o3l"]
[ext_resource type="Texture2D" uid="uid://cifi43h61bkck" path="res://img/nucleo_3/actividad_03/idea_2_2_hover.png" id="105_43oi0"]
[ext_resource type="Texture2D" uid="uid://bisym5udytdeu" path="res://img/nucleo_3/actividad_03/idea_2_2.png" id="105_obtl5"]
[ext_resource type="Texture2D" uid="uid://c3viq164elkt8" path="res://img/nucleo_3/actividad_03/idea_3_3.png" id="107_tqf07"]
[ext_resource type="Texture2D" uid="uid://erqd60h43rj8" path="res://img/nucleo_3/actividad_03/info.png" id="108_vy1b1"]
[ext_resource type="PackedScene" uid="uid://c0pnxckwulqw5" path="res://scenes/actividades/presionar_anim.tscn" id="109_2dxno"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="109_at72u"]
[ext_resource type="Texture2D" uid="uid://cq175lnbife11" path="res://img/nucleo_3/actividad_03/info_final.png" id="110_s6m81"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jp0h1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qb016")
}, {
"duration": 1.0,
"texture": ExtResource("3_cgyqw")
}, {
"duration": 1.0,
"texture": ExtResource("4_fcijg")
}, {
"duration": 1.0,
"texture": ExtResource("5_qn0dx")
}, {
"duration": 1.0,
"texture": ExtResource("6_lhpnn")
}, {
"duration": 1.0,
"texture": ExtResource("7_xxl0k")
}, {
"duration": 1.0,
"texture": ExtResource("8_wjlmf")
}, {
"duration": 1.0,
"texture": ExtResource("9_m71y3")
}, {
"duration": 1.0,
"texture": ExtResource("10_jse87")
}, {
"duration": 1.0,
"texture": ExtResource("11_nido4")
}, {
"duration": 1.0,
"texture": ExtResource("12_qkjud")
}, {
"duration": 1.0,
"texture": ExtResource("13_3ufxv")
}, {
"duration": 1.0,
"texture": ExtResource("14_fu35h")
}, {
"duration": 1.0,
"texture": ExtResource("15_k636h")
}, {
"duration": 1.0,
"texture": ExtResource("16_ifrmd")
}, {
"duration": 1.0,
"texture": ExtResource("17_itb0u")
}, {
"duration": 1.0,
"texture": ExtResource("18_5341c")
}, {
"duration": 1.0,
"texture": ExtResource("19_sd7wt")
}, {
"duration": 1.0,
"texture": ExtResource("20_hbdxf")
}, {
"duration": 1.0,
"texture": ExtResource("21_vanhm")
}, {
"duration": 1.0,
"texture": ExtResource("22_a2crw")
}, {
"duration": 1.0,
"texture": ExtResource("23_xo44f")
}, {
"duration": 1.0,
"texture": ExtResource("24_jv5oe")
}, {
"duration": 1.0,
"texture": ExtResource("25_d5hng")
}, {
"duration": 1.0,
"texture": ExtResource("26_nhftf")
}, {
"duration": 1.0,
"texture": ExtResource("27_cmfge")
}, {
"duration": 1.0,
"texture": ExtResource("28_jq0n1")
}, {
"duration": 1.0,
"texture": ExtResource("29_0d7ay")
}, {
"duration": 1.0,
"texture": ExtResource("30_2i8u8")
}, {
"duration": 1.0,
"texture": ExtResource("31_pq8ww")
}, {
"duration": 1.0,
"texture": ExtResource("32_l2tis")
}, {
"duration": 1.0,
"texture": ExtResource("33_b3cg0")
}, {
"duration": 1.0,
"texture": ExtResource("34_snrby")
}, {
"duration": 1.0,
"texture": ExtResource("35_61cjp")
}, {
"duration": 1.0,
"texture": ExtResource("36_yqohq")
}, {
"duration": 1.0,
"texture": ExtResource("37_a7xi8")
}, {
"duration": 1.0,
"texture": ExtResource("38_jabhf")
}, {
"duration": 1.0,
"texture": ExtResource("39_ve2iv")
}, {
"duration": 1.0,
"texture": ExtResource("40_lrked")
}, {
"duration": 1.0,
"texture": ExtResource("41_3s5os")
}, {
"duration": 1.0,
"texture": ExtResource("42_ub438")
}, {
"duration": 1.0,
"texture": ExtResource("43_6jnou")
}, {
"duration": 1.0,
"texture": ExtResource("44_y2tjt")
}, {
"duration": 1.0,
"texture": ExtResource("45_4iph0")
}, {
"duration": 1.0,
"texture": ExtResource("46_yv0m8")
}, {
"duration": 1.0,
"texture": ExtResource("47_oj041")
}, {
"duration": 1.0,
"texture": ExtResource("48_by23t")
}, {
"duration": 1.0,
"texture": ExtResource("49_ryiod")
}, {
"duration": 1.0,
"texture": ExtResource("50_1fpvo")
}, {
"duration": 1.0,
"texture": ExtResource("51_lopdd")
}, {
"duration": 1.0,
"texture": ExtResource("52_ied7r")
}, {
"duration": 1.0,
"texture": ExtResource("53_uguxa")
}, {
"duration": 1.0,
"texture": ExtResource("54_ds677")
}, {
"duration": 1.0,
"texture": ExtResource("55_fg66j")
}, {
"duration": 1.0,
"texture": ExtResource("56_8400n")
}, {
"duration": 1.0,
"texture": ExtResource("57_omw73")
}, {
"duration": 1.0,
"texture": ExtResource("58_687c4")
}, {
"duration": 1.0,
"texture": ExtResource("59_arqli")
}, {
"duration": 1.0,
"texture": ExtResource("60_llfsa")
}, {
"duration": 1.0,
"texture": ExtResource("61_fybfs")
}, {
"duration": 1.0,
"texture": ExtResource("62_g5sb6")
}, {
"duration": 1.0,
"texture": ExtResource("63_eimxp")
}, {
"duration": 1.0,
"texture": ExtResource("64_lpgbv")
}, {
"duration": 1.0,
"texture": ExtResource("65_jae12")
}, {
"duration": 1.0,
"texture": ExtResource("66_cadfq")
}, {
"duration": 1.0,
"texture": ExtResource("67_q1den")
}, {
"duration": 1.0,
"texture": ExtResource("68_rxnbq")
}, {
"duration": 1.0,
"texture": ExtResource("69_ysbd7")
}, {
"duration": 1.0,
"texture": ExtResource("70_g8iwh")
}, {
"duration": 1.0,
"texture": ExtResource("71_wsi1p")
}, {
"duration": 1.0,
"texture": ExtResource("72_3h3hs")
}, {
"duration": 1.0,
"texture": ExtResource("73_2oqwl")
}, {
"duration": 1.0,
"texture": ExtResource("74_rs010")
}, {
"duration": 1.0,
"texture": ExtResource("75_jnt0s")
}, {
"duration": 1.0,
"texture": ExtResource("76_n65fg")
}, {
"duration": 1.0,
"texture": ExtResource("77_73iq7")
}, {
"duration": 1.0,
"texture": ExtResource("78_v0yot")
}, {
"duration": 1.0,
"texture": ExtResource("79_f07wx")
}, {
"duration": 1.0,
"texture": ExtResource("80_u0nsi")
}, {
"duration": 1.0,
"texture": ExtResource("81_crsi1")
}, {
"duration": 1.0,
"texture": ExtResource("82_68fvu")
}, {
"duration": 1.0,
"texture": ExtResource("83_i07m2")
}, {
"duration": 1.0,
"texture": ExtResource("84_472ew")
}, {
"duration": 1.0,
"texture": ExtResource("85_rgpvd")
}, {
"duration": 1.0,
"texture": ExtResource("86_fpb1l")
}, {
"duration": 1.0,
"texture": ExtResource("87_odx4m")
}, {
"duration": 1.0,
"texture": ExtResource("88_2oufi")
}, {
"duration": 1.0,
"texture": ExtResource("89_wn007")
}, {
"duration": 1.0,
"texture": ExtResource("90_f7i5b")
}, {
"duration": 1.0,
"texture": ExtResource("91_ppk52")
}, {
"duration": 1.0,
"texture": ExtResource("92_m475f")
}, {
"duration": 1.0,
"texture": ExtResource("93_rikf5")
}, {
"duration": 1.0,
"texture": ExtResource("94_kph4a")
}, {
"duration": 1.0,
"texture": ExtResource("95_bikjs")
}, {
"duration": 1.0,
"texture": ExtResource("96_dhha3")
}, {
"duration": 1.0,
"texture": ExtResource("97_8ro85")
}, {
"duration": 1.0,
"texture": ExtResource("98_2bq1w")
}, {
"duration": 1.0,
"texture": ExtResource("99_tx8s3")
}, {
"duration": 1.0,
"texture": ExtResource("100_uep3e")
}, {
"duration": 1.0,
"texture": ExtResource("101_7gllj")
}],
"loop": true,
"name": &"default",
"speed": 25.0
}]

[node name="Actividad03" type="Node2D"]
script = ExtResource("1_a5p8h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.250818, 0.250818, 0.250818, 1)
scale = Vector2(3.2, 3.19527)
sprite_frames = SubResource("SpriteFrames_jp0h1")
centered = false

[node name="Titila" parent="." instance=ExtResource("102_yh0l6")]
position = Vector2(635, 177)
scale = Vector2(1.61017, 3.52804)
color = Color(0.439216, 0.482353, 0.886275, 1)

[node name="Idea11" type="Sprite2D" parent="."]
position = Vector2(346, 548)
texture = ExtResource("103_22o3l")

[node name="Idea22" type="TextureButton" parent="."]
offset_left = 708.0
offset_top = 289.0
offset_right = 1135.0
offset_bottom = 724.0
scale = Vector2(1.195, 1.195)
texture_normal = ExtResource("105_obtl5")
texture_hover = ExtResource("105_43oi0")

[node name="Idea33" type="Sprite2D" parent="."]
position = Vector2(1582, 548)
texture = ExtResource("107_tqf07")

[node name="Info" type="Sprite2D" parent="."]
visible = false
position = Vector2(616, 835)
texture = ExtResource("108_vy1b1")

[node name="InfoFinal" type="Sprite2D" parent="."]
visible = false
position = Vector2(970, 529)
texture = ExtResource("110_s6m81")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Titila2" parent="." instance=ExtResource("102_yh0l6")]
visible = false
position = Vector2(905, 567)
scale = Vector2(0.404358, 0.345794)
color = Color(0.439216, 0.482353, 0.886275, 1)

[node name="BotonS" parent="." instance=ExtResource("109_at72u")]
visible = false
offset_left = 924.0
offset_top = 582.0
offset_right = 1052.0
offset_bottom = 627.0
color = Color(0.439216, 0.482353, 0.886275, 1)
texto = "CERRAR"

[node name="Presionar" parent="." instance=ExtResource("109_2dxno")]
modulate = Color(0.439216, 0.482353, 0.886275, 1)
position = Vector2(2, -5)

[connection signal="pressed" from="Idea22" to="." method="_on_idea_22_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="BotonS" to="." method="_on_boton_s_pressed"]
